# twentieth-century-movie-adaptations

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/twentieth_century_movie_adaptations/: __about__.py  __init__.py  index.ipynb
