[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twentieth-century-movie-adaptations"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kenneth Yang", email = "kjy5@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"notebook==7.3.2",
]

[project.urls]
Documentation = "https://github.com/Kenneth Yang/twentieth-century-movie-adaptations#readme"
Issues = "https://github.com/Kenneth Yang/twentieth-century-movie-adaptations/issues"
Source = "https://github.com/Kenneth Yang/twentieth-century-movie-adaptations"

[tool.hatch.version]
path = "src/twentieth_century_movie_adaptations/__about__.py"

[tool.hatch.envs.default]
python = "3.13.1"
installer = "uv"

[tool.hatch.envs.default.scripts]
build = "jupyter nbconvert src/twentieth_century_movie_adaptations/index.ipynb --execute --to html --output-dir dist"